--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ h1 {
   text-align: center;
   text-transform: uppercase;
   color: #4CAF50;
+  font-size: 2.5em; /* 40px/16=2.5em */
+}
+
+h2 {
+  font-size: 30px;
 }
 
 h1.overline {
@@ -33,6 +38,8 @@ p {
   text-align: justify;
   letter-spacing: 3px;
   white-space: nowrap;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 14px;
 }
 
 p.uppercase {
@@ -49,6 +56,7 @@ p.capitalize {
 
 p.small {
   line-height: 0.7;
+  font-variant: small-caps;
 }
 
 p.big {
@@ -61,6 +69,52 @@ p.one {
 
 p.two {
   word-spacing: -2px;
+}
+
+p.normal {
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+}
+
+p.light {
+  font-weight: lighter;
+}
+
+p.thick {
+  font-weight: bold;
+}
+
+p.thicker {
+  font-weight: 900;
+}
+
+p.italic {
+  font-style: italic;
+}
+
+p.oblique {
+  font-style: oblique;
+}
+
+p.a {
+  font: 20px Arial, sans-serif;
+}
+
+p.b {
+  font: italic small-caps bold 12px/30px Georgia, serif;
+}
+
+.p1 {
+  font-family: "Times New Roman", Times, serif;
+}
+
+.p2 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.p3 {
+  font-family: "Lucida Console", "Courier New", monospace;
 }
 
 a {
