--- a/style.css
+++ b/style.css
@@ -1,3 +1,67 @@
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: coral;
+}
+
+th {
+  background-color: #04AA6D;
+  color: white;
+}
+
+th, td {
+  border-bottom: 1px solid black;
+}
+
+th, td {
+  padding: 15px;
+}
+
+table {
+  width: 50%;
+  border-collapse: collapse;
+}
+
+th {
+  height: 70px;
+  text-align: left;
+}
+
+td {
+  text-align: left;
+  height: 50px;
+  vertical-align: center;
+}
+
+#customers {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#customers td, #customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#customers tr:hover {
+  background-color: #ddd;
+}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
+
 div {
   border: 1px solid gray;
   padding: 8px;
