--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+div {
+  background-color: coral;
+  width: 200px;
+  height: 65px;
+  border: 1px solid black;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
 #overflowTest {
   background: #4CAF50;
   color: white;
