--- a/style.css
+++ b/style.css
@@ -1,10 +1,26 @@
-.center {
+div ~ p {
+  background-color: yellow;
+}
+
+/*div + p {
+  background-color: yellow;
+}*/
+
+/*div > p {
+  background-color: yellow;
+}*/
+
+/*div p {
+  background-color: yellow;
+}*/
+
+/*.center {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 200px;
   border: 3px solid green;
-}
+}*/
 
 /*.center {
   height: 200px;
