--- a/style.css
+++ b/style.css
@@ -1,6 +1,49 @@
-q:lang(no) {
-  quotes: "~" "~";
+::selection {
+  color: red;
+  background: yellow;
 }
+
+/*::marker {
+  color: red;
+  font-size: 23px;
+}*/
+
+/*h1::after {
+  content: url(img_tree.png);
+}*/
+
+/*h1::before {
+  content: url(img_tree.png);
+}*/
+
+/*p::first-letter {
+  color: #ff0000;
+  font-size: xx-large;
+}
+
+p::first-line {
+  color: #0000ff;
+  font-variant: small-caps;
+}*/
+
+/*p.intro::first-letter {
+  color: #ff0000;
+  font-size: 200%;
+}*/
+
+/*p::first-letter {
+  color: #ff0000;
+  font-size: xx-large;
+}*/
+
+/*p::first-line {
+  color: #ff0000;
+  font-variant: small-caps;
+}*/
+
+/*q:lang(no) {
+  quotes: "~" "~";
+}*/
 
 /*p:first-child i {
   color: blue;
