--- a/style.css
+++ b/style.css
@@ -1,4 +1,72 @@
-.dropbtn {
+div.gallery {
+  border: 1px solid #ccc;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/*div.gallery {
+  margin: 5px;
+  border: 1px solid #ccc;
+  float: left;
+  width: 180px;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}*/
+
+/*.dropbtn {
   background-color: #4CAF50;
   color: white;
   padding: 16px;
@@ -38,7 +106,7 @@
 
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
-}
+}*/
 
 /*.dropdown {
   position: relative;
