--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
-#navlist {
+input[type="text"] {
+  width: 150px;
+  display: block;
+  margin-bottom: 10px;
+  background-color: yellow;
+}
+
+input[type="button"] {
+  width: 120px;
+  margin-left: 35px;
+  display: block;
+}
+
+/*[title~="flower"] {
+  border: 5px solid yellow;
+}
+
+a[target="_blank"] {
+  background-color: yellow;
+}
+*/
+/*#navlist {
   position: relative;
 }
 
@@ -43,7 +64,7 @@
 
 #next a:hover {
   background: url('img_navsprites_hover.gif') -91px -45px;
-}
+}*/
 
 /*#home {
   width: 46px;
